objects/Summary__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sold Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Sale_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Sale Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sold_Quantity__c</columns>
        <columns>Total_Sale_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>